--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "vuetify": "^2.1.10"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.9.0",
     "babel-eslint": "^10.0.1",
+    "deepmerge": "^4.2.2",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "fibers": "^4.0.2",
+    "sass": "^1.23.3",
+    "sass-loader": "^8.0.0"
   }
 }
